--- a/source/bio.html.haml
+++ b/source/bio.html.haml
@@ -1,5 +1,9 @@
-.image-container-small
-	= image_tag 'bio.jpg', :alt => 'Biography Picture'
+---
+image: bio
+title: Bio
+---
+/.image-container-small
+/	= image_tag 'bio.jpg', :alt => 'Biography Picture'
 %header.left
 	%h3.underline About Us
 %p Eva Diaz Duarte is a third generation hairdresser from Oviedo, Spain. She grew up watching her mother, aunt, and grandmother transform clients with new hairstyles. Realizing that she had the same passion for beauty, Eva moved to London at the age of 18 to train with Vidal Sassoon, and in 1997 was invited to join the Sebastian technical team in Los Angeles
