--- a/source/bio.html.haml
+++ b/source/bio.html.haml
@@ -1,12 +1,11 @@
 ---
+class: ear
 image: bio
 title: Bio
+hero: true
 ---
-/.image-container-small
-/	= image_tag 'bio.jpg', :alt => 'Biography Picture'
-%header.left
-	%h3.underline About Us
-%p Eva Diaz Duarte is a third generation hairdresser from Oviedo, Spain. She grew up watching her mother, aunt, and grandmother transform clients with new hairstyles. Realizing that she had the same passion for beauty, Eva moved to London at the age of 18 to train with Vidal Sassoon, and in 1997 was invited to join the Sebastian technical team in Los Angeles
+
+%p#top Eva Diaz Duarte is a third generation hairdresser from Oviedo, Spain. She grew up watching her mother, aunt, and grandmother transform clients with new hairstyles. Realizing that she had the same passion for beauty, Eva moved to London at the age of 18 to train with Vidal Sassoon, and in 1997 was invited to join the Sebastian technical team in Los Angeles
 
 %p After 6 years at Fred Segal in Santa Monica, Eva opened Duarte Salon in 2003. Duarte Salon is a true Spanish-style salon with a comfortable, familial environment, and providing top-of-the-line services in L.A.’s Hollywood Hills.
 
